# audiodeepfake-detection-swt

./: .gitignore  LICENSE  README.md  pyproject.toml
evaluations/: wavfiles.md
evaluations/fingerprints/: explanation.md
evaluations/generalization/: explanation.md  wide_24_fbm_coif9_no_log.txt  wide_24_fbm_coif9_with_log.txt  wide_24_fbm_sym7_no_log.txt  wide_24_fbm_sym7_with_log.txt
evaluations/system/: juwels-booster-lscpu.txt  juwels-booster-nvidia-smi.txt
script/: benchmark_data_loading.py  config_evaluate.py  config_train.py  discover_fingerprints.py  evaluate_downloads.py  evaluate_model.py  gather_evaluation_results.py  gather_training_results.py  generate_dataset.py  make_configurations.py  plot_fingerprints.py  print_evaluations.py  run_benchmark_data_loading.sh  run_devel.sh  run_devel_cpu.sh  run_discover_fingerprints.sh  run_evaluate.sh  run_generate_dataset.sh  run_tests.sh  run_training.sh  run_training_and_evaluate.sh  run_training_and_evaluate_multiple.sh
script/config/: 000_debug.yaml  001_simple_1d.yaml  002_simple_2d.yaml  005_wide_6_1d.yaml  006_wide_6_2d.yaml  007_resnet_50.yaml  008_resnet_50_pretrained.yaml  010_wide_24_FBM.yaml  011_wide_32_FBM.yaml  012_wpt_basic_FBM.yaml  013_wpt_bottle_FBM.yaml  014_DCNN_FBM.yaml
script/figures/: dataset_batch_histograms.py  dataset_sample.py  fingerprint_coefficients.py  fingerprint_compare_wavelets.py  fingerprint_correlations.py  fingerprint_scalograms.py  fingerprint_spectrograms.py  (+8 more)
tests/: test_configuration.py  test_dataset.py  test_dataset_transform.py  test_residual_block.py  test_utils.py
(+30 files in other folders)
